content/docs/v1.5/index.mdx
---
title: "Introduction"
description: "Open source container update monitoring built in TypeScript. Auto-discover containers, detect image updates across 23 registries, and trigger notifications via 20+ services."
---

import { Callout } from 'fumadocs-ui/components/callout';

## 🔍 How it works

🐳 **Watchers** scan Docker hosts to discover containers to monitor.

📦 **Registries** query remote Docker registries to find update candidates.

⚡ **Triggers** perform actions when updates are available — notify, update, or run custom scripts.

## ✨ Key features

- 🔎 Auto-discovery of running containers
- 📦 23 registry integrations (Docker Hub, GHCR, ECR, GCR, GAR, GitLab, Quay, and more)
- 🔔 20+ trigger types (Slack, Discord, Telegram, SMTP, webhooks, Docker auto-update, and more)
- 🧪 Dry-run preview before applying updates
- 💾 Image backup and one-click rollback
- 🔄 Auto-rollback on health check failure
- 🪝 Pre/post-update lifecycle hooks
- 🔁 Graceful self-update
- 🌐 [Distributed agents](/docs/configuration/agents) for remote Docker hosts
- 📊 Prometheus metrics and Grafana dashboard
- 🔐 OIDC authentication support
- 🛡️ Update Bouncer — vulnerability scanning, signature verification, and SBOM
- 🛠️ Full REST API, webhooks, and audit log

## 🚀 Quick start

```bash
docker run -d --name drydock \
  -v /var/run/docker.sock:/var/run/docker.sock \
  -p 3000:3000 \
  codeswhat/drydock:v1.5.2
```

<Callout type="warn">
Direct socket access grants the container full control over the Docker daemon. See the [Quick Start guide](/docs/quickstart) for the recommended **socket proxy** setup and other [secure connection options](/docs/configuration/watchers#docker-socket-security).
</Callout>

## 📚 Next steps

- [Getting started guide](/docs/getting-started) — step-by-step walkthrough from watching to notifications to auto-updates
- [Latest release highlights](/docs/updates) — recent features and where each one is documented
- [Configure registries](/docs/configuration/registries) — set up private image access
- [Set up triggers](/docs/configuration/triggers) — enable notifications and auto-updates
- [Configure webhooks](/docs/configuration/webhooks) — integrate with CI/CD pipelines
- [Lifecycle hooks](/docs/configuration/hooks) — run commands before and after updates
- [Backup & rollback](/docs/configuration/rollback) — automatic backups and one-click restore
- [Enable authentication](/docs/configuration/authentications) — secure your instance
- [Monitor with Prometheus](/docs/monitoring) — add observability
- [Distributed agents](/docs/configuration/agents) — monitor containers across multiple Docker hosts from one UI
- [Container log viewer](/docs/configuration/logs) — stream and search container logs
- [Debug dump](/docs/api/app#download-diagnostic-debug-dump) — export diagnostic snapshots for troubleshooting
